--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,13 +2,14 @@
 import { ClientRouter } from 'astro:transitions';
 import '../styles/global.css';
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content={description} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>{title}</title>
 		<ClientRouter />
