--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,10 @@ import Layout from "../layouts/Layout.astro";
 import Cards from "../components/Cards.astro";
 
 const title = "Pagina inicial del blog";
+const description = "Blog sobre Astro y CMS headless";
 ---
 
-<Layout title={title}>
+<Layout title={title} description={description}>
   <section class="hero">
     <h1>Curso de Astro + CMS</h1>
     <p>Aprende a crear un blog con Astro y un CMS headless.</p>
