--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -29,7 +29,7 @@ const content = await marked.parse(Content);
 const { processedContent: contentWithIds, headings: extractedHeadings } = processContent(content);
 ---
 
-<Layout title={Title}>
+<Layout title={Title} description={Description}>
   <div class="postHeader">
     <div>
       <div class="postImageContainer">
