--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -24,8 +24,8 @@ const headings = extractedHeadings.map(({ level, text, id }) => {
       top: 20px;
       height: max-content;
       padding: 20px;
-      width: 30%;
       border-radius: 8px;
+      flex: 0.3 0 150px;
     }
     /* Estilos para tabla de contenidos */
     :global(.heading-link) {
