--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -30,13 +30,15 @@ const { processedContent: contentWithIds, headings: extractedHeadings } = proces
 ---
 
 <Layout title={Title} description={Description}>
-  <div class="postHeader">
-    <div>
-      <div class="postImageContainer">
+  <div class="post-header">
+    <div class="title-image-container">
+      <div class="post-image-container">
         <h1 transition:name={`title-${slug}`}>{Title}</h1>
         <img
+          width="450"
+          height="300"
           transition:name={`img-${slug}`}
-          class="postImage"
+          class="post-image"
           src={post.FeaturedImage[0].url}
           alt={Title}
         />
@@ -69,48 +71,54 @@ const { processedContent: contentWithIds, headings: extractedHeadings } = proces
     }
 
     .post-content {
-      width: 70%;
       padding: 20px;
       box-sizing: border-box;
     }
 
+    .post-content {
+      flex: 1;
+    }
     /* Header del post */
-    .postHeader {
-      display: flex;
+    .post-header {
+      display: flex;      
       flex-direction: row;
       max-width: 1000px;
       margin: auto;
-      padding: 20px;
+      gap: 20px;
       box-sizing: border-box;
     }
 
-    .postHeader h1 {
+    .post-header > div {
+      flex: 1;
+    }
+
+    .post-header h1 {
       font-size: 2.5rem;
       margin-bottom: 16px;
       align-self: center;
     }
 
-    .postHeader p {
+    .post-header p {
       font-size: 1.2rem;
     }
 
-    .postHeader time {
+    .post-header time {
       font-size: 0.9rem;
-      color: #666;
+      color: #999;
       margin-bottom: 20px;
     }
 
-    .postImageContainer {
+    .post-image-container {
       display: block;
       justify-content: center;
       margin: 0 auto;
     }
 
-    .postImage {
+    .post-image {
       max-width: 100%;
+      width: 100%;
       height: auto;
       border-radius: 8px;
-      margin: 20px 0;
       object-fit: cover;
     }
 
@@ -118,7 +126,6 @@ const { processedContent: contentWithIds, headings: extractedHeadings } = proces
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-left: 50px;
     }
 
 
@@ -167,11 +174,5 @@ const { processedContent: contentWithIds, headings: extractedHeadings } = proces
       margin: 0 auto;
     }
 
-    /* Responsive */
-    @media (max-width: 768px) {
-      .post-content {
-        width: 100%;
-      }
-    }
   </style>
 </Layout>
