--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,8 @@
 html,
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #0D0F12;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #0d0f12;
 }
 
 main {
@@ -10,27 +11,23 @@ main {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: clamp(1.75rem, 1.629rem + 0.518vw, 2.25rem);
   color: #fff;
-  text-wrap: balance;
 }
 
 h2 {
   font-size: 2rem;
   color: #dcdada;
-  text-wrap: balance;
 }
 
 h3 {
   font-size: 1.5rem;
   color: #dcdada;
-  text-wrap: balance;
 }
 
 h4 {
   font-size: 1.25rem;
   color: #dcdada;
-  text-wrap: balance;
 }
 
 p {
