--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import '../styles/global.css';
 const { title, description } = Astro.props;
 ---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -19,4 +19,3 @@ const { title, description } = Astro.props;
 		<slot />
 	</body>
 </html>
-
