fix: tilte, content padding, toc

--- a/src/components/Toc.astro
+++ b/src/components/Toc.astro
@@ -98,7 +98,7 @@ const headings = extractedHeadings.map(({ level, text, id }) => {
         });
       },
       {
-        rootMargin: "0px 0px -70% 0px", // Detecta cuando el heading entra al 30% superior
+        rootMargin: "0% 0px -80% 0px",
         threshold: 0.1,
       }
     );
