--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -109,9 +109,9 @@ const { processedContent: contentWithIds, headings: extractedHeadings } = proces
   }
 
   /* Estilos para el contenido del post */
-  :isglobal(.post-content p),
-  :isglobal(.post-content ul),
-  :isglobal(.post-content ol) {
+  :global(.post-content p),
+  :global(.post-content ul),
+  :global(.post-content ol) {
     margin-bottom: 1lh;
   }
 
