--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -78,7 +78,7 @@ const { processedContent: contentWithIds, headings: extractedHeadings } = proces
 
   .title-container a {
     margin-right: 12px;
-    color: #0070f3;
+    color: #09f;
     text-decoration: none;
     transition: color 0.2s ease;
 
